# shkaf

backend/: .flake8  .gitignore  pyproject.toml
backend/src/shkaf/: alembic.ini  config.py  db.py  enums.py  main.py  models.py  queries.py  seed.py  utils.py
backend/src/shkaf/auth/: backend.py  dependencies.py  main.py  token.py  user.py  user_manager.py
backend/src/shkaf/migrations/: env.py
backend/src/shkaf/migrations/versions/: 03df15badc08_make_brand_and_tags_optional_in_.py  2786e771c6f8_add_clothing_piece_information.py  2de04320e14d_add_user_management_tables.py  2ef084b43a2f_add_image_path_column_to_clothing_piece.py  416275146e2e_make_choices_data_user_specific.py  58c4a44a88be_add_image_no_bg_path_to_clothing_pieces.py  8c346f1119ba_add_domain_model_relationships.py  c86e8fd2928b_add_outfitoccasion_outfitaesthetic_.py
backend/src/shkaf/routers/: __init__.py  closet.py  data.py  image.py
backend/src/shkaf/schema/: request.py  response.py
frontend/: app.json  package-lock.json  package.json
frontend/components/: animated-logo-screen.tsx  login-screen.tsx
frontend/components/ui/: text-input.tsx
frontend/constants/: theme.ts
frontend/icons/: index.tsx
