[project]
name = "shkaf"
version = "0.1.0"
description = ""
authors = [
    {name = "dejan.slamkov",email = "dejan@codechem.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)"
]

[tool.poetry]
packages = [{include = "shkaf", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
