[project]
name = "shkaf"
version = "0.1.0"
description = ""
authors = [
    {name = "dejan.slamkov", email = "dejan_0200@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
]

[tool.poetry.group.dev.dependencies]
isort = ">=6.0.1,<7.0.0"
black = ">=25.1.0,<26.0.0"
mypy = ">=1.16.1,<2.0.0"
flake8 = ">=7.2.0,<8.0.0"
flake8-fixme = "^1.1.1"
flake8-unused-arguments = "^0.0.13"
flake8-cognitive-complexity = "^0.1.0"
flake8-bugbear = "^23.9.16"

[tool.poetry]
packages = [{include = "shkaf", from = "src"}]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.mypy]
python_version = "3.13"
files = ['src']
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
